app/src/main/resources/deployment/openshift/schema-registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: kafka-example
  labels:
    app: kafka-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      enableServiceLinks: false
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:7.0.1
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /subjects
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /subjects
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
