app/src/main/resources/deployment/openshift/kafka-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka-example
  labels:
    app: kafka-example
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: kafka-ui
