app/src/main/resources/deployment/openshift/schema-registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: kafka-example
  labels:
    app: kafka-example
spec:
  selector:
    app: schema-registry
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
