app/src/main/resources/deployment/openshift/kafka-ui-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafka-ui
  namespace: kafka-example
  labels:
    app: kafka-example
spec:
  to:
    kind: Service
    name: kafka-ui
  port:
    targetPort: 8080
