app/src/main/resources/deployment/openshift/schema-registry-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: schema-registry
  namespace: kafka-example
  labels:
    app: kafka-example
spec:
  to:
    kind: Service
    name: schema-registry
  port:
    targetPort: 8081
